--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -6,9 +6,9 @@
 }
 
 .container {
-  position: relative;
+  display: flex;
+  flex-direction: column-reverse;
   > span {
-    bottom: 0;
     margin-bottom: 1rem;
     font-size: .75rem;
     font-family: 'Okta Neue';
