--- a/src/components/GridItem/styles.module.scss
+++ b/src/components/GridItem/styles.module.scss
@@ -4,3 +4,13 @@
   border-width: 2px;
   border-color: #000000;
 }
+
+.container--center-vertical {
+  display: flex;
+  align-items: center;
+}
+
+.container--center-horizontal {
+  display: flex;
+  justify-content: center;
+}
