--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,8 +1,14 @@
+@use "src/styles/variables";
+
 .footer {
   height: 9.5rem;
   display: flex;
   justify-content: center;
-  background-color: #040404;
+  background-color: variables.$night-100;
+  
+  @media (max-width: variables.$breakpoint-sm) {
+    height: 5rem;
+  }
 }
 
 .container {
@@ -12,6 +18,6 @@
     margin-bottom: 1rem;
     font-size: .75rem;
     font-family: 'Okta Neue';
-    color: #E8E2E0;
+    color: variables.$snow-200;
   }
 }
