--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -58,3 +58,32 @@
   }
 }
 
+.animation {
+  position: relative;
+  text-decoration: none;
+  display: inline-block;
+  color: black;
+  padding: 0 1px;
+  transition: color ease 0.3s;
+
+  &::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 10%;
+    left: 0;
+    bottom: 0;
+    background-color: variables.$red-300;
+    transition: all ease 0.3s;
+  }
+
+  &:hover {
+    color: variables.$snow-100;
+
+    &::after {
+      height: 100%;
+    }
+  }
+}
+
